Latest developments: correcting overflow.

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -3,7 +3,7 @@
 
 /* BODY ****************************************************************** */
 html {
-  /*overflow-x: hidden;*/
+  overflow-x: hidden;
 }
 
 body {  
@@ -1617,6 +1617,7 @@ input[type="text"]#modal-datepicker-input:focus {
 #modal-datepicker-datepicker .ui-state-default {
   background: #1c75c0;
   font-weight: normal;
+  font-size: smaller;
   color: white;
   border-radius: 2px;
   outline: none;
